Bug 329411 - bluedevil2.0, stay in "active" state
Summary: bluedevil2.0, stay in "active" state
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth (other bugs)
Version First Reported In: 2.0-rc1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-30 10:24 UTC by Philippe ROUBACH
Modified: 2014-03-09 03:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2013-12-30 10:24:20 UTC
Samsung SII P, bluetooth 3.0, android 4.2.2 , Astro bluetooth plugin (obex ftp server)
Opensuse 13.1 , kde 4.12.0 with bluedevil 2.0~rc1-16.2 and libbluedevil2 2.0~rc1-5.1 bluez 5.8-3.5.1

 i plug the bluetooth adapter
 then
 bluedevil appears in the systray but in "active" state
 then
 i turn off bluedevil 
then bluedevil switches to "unactive" state 
then i close the kde session 
then i reopen the kde session 
then bluedevil is in "active state" !

Reproducible: Always
Comment 1 Philippe ROUBACH 2014-01-07 14:33:13 UTC
i experiment an amazing thing .

turn off bluedevil .
after several minutes (some time a long delay) bluedevil returns to "on" .
Comment 2 Alex Fiestas 2014-03-09 03:06:32 UTC
Git commit c76d6e50ba6466403457371ab8416b0600af4a77 by Àlex Fiestas.
Committed on 09/03/2014 at 03:04.
Pushed by afiestas into branch 'master'.

Do not set the Adapter back to powered

This seems to be some code back from the port, an
attemp to save the state.

Imho the library should not do that but rather an external
entity such the bluedevil daemon.

M  +0    -2    bluedevil/bluedeviladapter.cpp

http://commits.kde.org/libbluedevil/c76d6e50ba6466403457371ab8416b0600af4a77