Do not set the Adapter back to powered

This seems to be some code back from the port, an
attemp to save the state.

Imho the library should not do that but rather an external
entity such the bluedevil daemon.

BUG:329411